Rest API and Swagger Doc
